# Blaze4J

./: .gitignore  CMakeLists.txt  README.md  pom.xml
.github/workflows/: issue-welcome.yml  linux.yml  macos.yml  welcome-issue.yml  windows.yml
docs/: CONTRIBUTING.md  Compiler.md  Validator.md  installation.md
src/main/cpp/: blaze_wrapper.cpp
src/main/java/com/github/madhavdhatrak/blaze4j/: Blaze.java  Blaze4jLogger.java  BlazeValidator.java  BlazeWrapper.java  CompiledSchema.java  NativeLoader.java  SchemaCompiler.java  SchemaRegistry.java  ValidationError.java  ValidationResult.java
src/main/java/com/sourcemeta/blaze/: Blaze.java  BlazeValidator.java  BlazeWrapper.java  CompiledSchema.java  ValidationError.java  ValidationResult.java
src/test/java/com/github/madhavdhatrak/blaze4j/: BlazeWrapperTest.java  ClasspathResolverTest.java  CustomResolverTest.java  DetailedValidationTest.java  Draft2019Runner.java  Draft2020Runner.java  Draft4Runner.java  Draft6Runner.java  Draft7Runner.java  Json.java  PreRegisteredSchemaTest.java
src/test/java/com/sourcemeta/blaze/: BlazeWrapperTest.java  ClasspathResolverTest.java  CustomResolverTest.java  DetailedValidationTest.java  Draft2019Runner.java  Draft2020Runner.java  Draft4Runner.java  Draft6Runner.java  Draft7Runner.java  Json.java  RefRemoteTest.java
src/test/java/com/sourcemeta/blaze/draft2020/: JSONSchemaTestSuite.java  Json.java  UnevaluatedItemsTest.java
